Improvement: Giving it some style
AP-63

--- a/apollo-ui/public/index.html
+++ b/apollo-ui/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full font-sans">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,11 +22,11 @@
     -->
     <title>Apollo UI</title>
   </head>
-  <body class="flex flex-1 h-full">
+  <body class="flex font-sans h-full overflow-hidden text-base-600 text-base font-600">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root" class="flex flex-1"></div>
+    <div id="root" class="w-full"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
