--- a/apollo-ui/public/index.html
+++ b/apollo-ui/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Harden</title>
+    <title>Mitigate</title>
   </head>
   <body class="flex font-sans h-full overflow-hidden text-base-600 text-base font-600">
     <noscript>
